<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            >


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/bank_head"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_35ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_account"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_22sdp"
                app:boxCornerRadiusBottomStart="@dimen/_22sdp"
                app:boxCornerRadiusTopEnd="@dimen/_22sdp"
                app:boxCornerRadiusTopStart="@dimen/_22sdp"
                app:boxStrokeColor="@color/color_pri_v"
                app:boxStrokeErrorColor="@color/primary_peach"
                app:boxStrokeWidth="0.2dp"
                app:endIconDrawable="@drawable/ic_mobile"
                app:endIconMode="custom"
                app:errorTextColor="@color/secondary_peach"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintVertical_bias="0.6"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_account_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bank_acc"
                    android:inputType="text"
                    android:maxLength="25"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_acc_re"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_22sdp"
                app:boxCornerRadiusBottomStart="@dimen/_22sdp"
                app:boxCornerRadiusTopEnd="@dimen/_22sdp"
                app:boxCornerRadiusTopStart="@dimen/_22sdp"
                app:boxStrokeColor="@color/color_pri_v"
                app:boxStrokeErrorColor="@color/primary_peach"
                app:boxStrokeWidth="0.2dp"
                app:endIconDrawable="@drawable/ic_mobile"
                app:endIconMode="custom"
                app:errorTextColor="@color/secondary_peach"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bank_account"
                app:layout_constraintVertical_bias="0.6"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bank_acc_re"
                    android:inputType="text"
                    android:maxLength="10"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_ifsc"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"

                android:elevation="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_22sdp"
                app:boxCornerRadiusBottomStart="@dimen/_22sdp"
                app:boxCornerRadiusTopEnd="@dimen/_22sdp"
                app:boxCornerRadiusTopStart="@dimen/_22sdp"
                app:boxStrokeColor="@color/color_pri_v"
                app:boxStrokeErrorColor="@color/primary_peach"
                app:boxStrokeWidth="0.2dp"
                app:endIconDrawable="@drawable/ic_mobile"
                app:endIconMode="custom"
                app:errorTextColor="@color/secondary_peach"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bank_acc_re"
                app:layout_constraintVertical_bias="0.6"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_ifsc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bank_ifsc"
                    android:inputType="number"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank_name"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_5sdp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_22sdp"
                app:boxCornerRadiusBottomStart="@dimen/_22sdp"
                app:boxCornerRadiusTopEnd="@dimen/_22sdp"
                app:boxCornerRadiusTopStart="@dimen/_22sdp"
                app:boxStrokeColor="@color/color_pri_v"
                app:boxStrokeErrorColor="@color/primary_peach"
                app:boxStrokeWidth="0.2dp"
                app:endIconDrawable="@drawable/ic_mobile"
                app:endIconMode="custom"
                app:errorTextColor="@color/secondary_peach"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bank_ifsc"
                app:layout_constraintVertical_bias="0.6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bank_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bank_name"
                    android:inputType="textEmailAddress"
                    android:maxLength="10"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:alpha="0.55"
                android:background="@drawable/button_gradient"
                android:enabled="false"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/contin"
                android:textAllCaps="false"
                android:textColor="@color/primary_blue"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/bottom_text"/>


            <ProgressBar
                android:id="@+id/otp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary_peach"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>