<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/otp_head"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_35ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13" />

            <TextView
                android:id="@+id/otp_head_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/opt_message"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <LinearLayout
                android:id="@+id/otp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7sdp"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:importantForAutofill="yes"
                    android:textAlignment="center"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:importantForAutofill="yes"
                    android:textAlignment="center"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/timer_grp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="timer, sec" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="00:30"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"

                app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                app:layout_constraintEnd_toStartOf="@id/sec" />

            <TextView
                android:id="@+id/sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="sec"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                app:layout_constraintEnd_toEndOf="@id/confirm_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:alpha="0.55"
                android:background="@drawable/button_gradient"
                android:enabled="false"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/contin"
                android:textAllCaps="false"
                android:textColor="@color/primary_blue"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintLeft_toLeftOf="@id/otp_container"
                app:layout_constraintRight_toRightOf="@id/otp_container"
                app:layout_constraintTop_toBottomOf="@id/otp_container"/>

            <TextView
                android:id="@+id/resend_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Didn't receive OTP? RESEND"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_btn" />

            <ProgressBar
                android:id="@+id/otp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary_peach"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/confirm_btn"
                app:layout_constraintEnd_toEndOf="@id/confirm_btn"
                app:layout_constraintStart_toStartOf="@id/confirm_btn"
                app:layout_constraintTop_toTopOf="@id/confirm_btn" />

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>